2017-03-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-exec-image): Add the `exit-on-error`
	workaround for Bug#695.

2017-03-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (MULTIBUILD_OPTIONS): Split into ...
	(MULTIBUILD_MODULES): Default to asdf (platform-independent) and
	rawsock (well-ported).
	(MULTIBUILD_EXTRAS): Empty by default.

2017-03-23  Sam Steingold  <sds@gnu.org>

	* stream.d (wr_by_array_iau8_buffered): Pass persev to
	write_byte_array_buffered() instead of persev_full.

2017-03-23  Reini Urban <reini.urban@gmail.com>
	    Sam Steingold  <sds@gnu.org>

	* stream.d (iconv): Condition "undef iconv" on whether it is
	defined, not on platform.

2017-03-23  Jerry James <loganjerry@gmail.com>
	    Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp (svm_destroy_model): Use C-style
	declaration - fix a compilation error (patch#34).

2017-03-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): Add a test for -x raising an error.
	(check-exec-image): Add tests for init-function raising an error.

2017-03-22  Sam Steingold  <sds@gnu.org>

	Fix bug#694: Cygwin+no-dynamic-modules fails with a shell syntax error
	* makemake.in (CLISP_DEF): Check CLISP_DEF instead of HSYSOS when
	deciding whether to modify CLISP_DEF or not.

2017-03-21  Bruno Haible  <bruno@clisp.org>

	Replace the 'newer' utility with a portable shell alternative.
	Jörg Höhle found that "newer $file1 $file2" is equivalent to
	test -f $file1 && \
	  { test ! -f $file2 || test -n "`find $file1 -prune -newer $file2`"; }
	* src/makemake.in (UTILS): Remove 'newer'.
	Use a 'find' based shell command instead of the 'newer' program.
	* utils/newer.c: Remove file.
	* Makefile.devel (GNULIB_CORE): Remove stat-time, timespec.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* build-aux/config.sub: Update from gnulib git.
